--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "ng serve",
     "build": "ng build --prod",
     "postbuild": "cp ./manifest.webapp dist/",
+    "deploy": "git-directory-deploy --directory dist/ --repo=https://$GITHUB_TOKEN@github.com/sedela/sedela.git",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
@@ -46,6 +47,7 @@
     "@types/node": "^6.0.116",
     "codelyzer": "^4.4.4",
     "copy-webpack-plugin": "^4.5.2",
+    "git-directory-deploy": "^1.5.1",
     "jasmine-core": "~2.8.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "^3.0.0",
