--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "ng build --prod",
     "watch": "ng build --watch",
     "deploy": "git-directory-deploy --directory dist/ --repo=https://$GITHUB_TOKEN@github.com/sedela/sedela.git",
+    "cozyPublish": "git fetch origin ${DEPLOY_BRANCH:-build}:${DEPLOY_BRANCH:-build} && cozy-app-publish --token $REGISTRY_TOKEN --build-commit $(git rev-parse ${DEPLOY_BRANCH:-build}) --build-dir './dist' --space sedela",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
@@ -47,6 +48,7 @@
     "@types/node": "^6.0.116",
     "codelyzer": "^4.4.4",
     "copy-webpack-plugin": "^4.5.2",
+    "cozy-app-publish": "^0.7.2",
     "git-directory-deploy": "^1.5.1",
     "jasmine-core": "~2.8.0",
     "jasmine-spec-reporter": "~4.2.1",
