--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^5.2.11",
+    "@angular/animations": "^6.1.7",
+    "@angular/cdk": "5.2.4",
     "@angular/common": "^5.2.11",
     "@angular/compiler": "^5.2.11",
     "@angular/core": "^5.2.11",
     "@angular/forms": "^5.2.11",
     "@angular/http": "^5.2.11",
+    "@angular/material": "5.2.4",
     "@angular/platform-browser": "^5.2.11",
     "@angular/platform-browser-dynamic": "^5.2.11",
     "@angular/router": "^5.2.11",
