--- a/package.json
+++ b/package.json
@@ -28,12 +28,16 @@
     "@angular/router": "^5.2.11",
     "@reactivex/rxjs": "^5.5.11",
     "ajv": "^5.5.2",
+    "body-parser": "^1.18.3",
     "core-js": "^2.5.7",
     "cozy-client": "^2.10.0",
+    "express": "^4.16.4",
     "hammerjs": "^2.0.8",
+    "mongoose": "^5.3.13",
     "ngx-quill": "^2.0.4",
     "quill": "^1.3.3",
     "rxjs": "^5.5.11",
+    "save": "^2.3.2",
     "zone.js": "^0.8.19"
   },
   "devDependencies": {
